--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - Web Player: Music for Everyone</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/logo.png">
 </head>
 <body>
     
