--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - Web Player: Music for Everyone</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="./assets/logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="sidebar">
+            <div class="nav">
+                <div class="nav-option">
+                    <div class="home">
+                        <i class="fa-solid fa-house"></i>
+                        <a href="#" style="color: antiquewhite;">Home</a>
+                    </div>
+                    
+                </div>
+                <div class="nav-option">
+                    <div class="library">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <a href="#" style="color: aliceblue;">Search</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-content">maincontent </div>
+        <div class="music-player">music player</div>
+    </div>
 </body>
 </html>
